sdk/ionic/2.0/groups-join-group.mdx
---
title: "Join A Group"
---



## Join a Group

In order to start participating in group conversations, you will have to join a group. You can do so using the `joinGroup()` method.

<Tabs>
<Tab title="Join Group">
```
var GUID = "GUID";
var password = "";
var groupType = CometChat.GROUP_TYPE.PUBLIC;

CometChat.joinGroup(GUID, groupType, password).then(
  (group) => {
    console.log("Group joined successfully:", group);
  },
  (error) => {
    console.log("Group joining failed with exception:", error);
  }
);
```

</Tab>

</Tabs>

The `joinGroup()` method takes the below parameters

| Parameter   | Description                                                                                                                                                                                                                        |
| :----------- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| `GUID`      | The GUID of the group you would like to join.                                                                                                                                                                                      |
| `groupType` | Type of the group. CometChat provides 3 types of groups viz.  a. CometChatConstants.GROUP\_TYPE\_PUBLIC (public)  b. CometChatConstants.GROUP\_TYPE\_\_\_PASSWORD (password)  c. CometChatConstants.GROUP\_TYPE\_PRIVATE (private) |
| `password`  | Password is mandatory in case of a password protected group.                                                                                                                                                                       |

Once you have joined a group successfully, you can send and receive messages in that group.

CometChat keeps a track of the groups joined and you do not need to join the group every time you want to communicate in the group.

You can identify if a group is joined using the `hasJoined` parameter in the `Group` object.

## Real-time Group Member Joined Events

*In other words, as a member of a group, how do I know if someone joins the group when my app is running?*

If a user joins any group, the members of the group receive a real-time event in the `onGroupMemberJoined()` method of the `GroupListener` class.

<Tabs>
<Tab title="Group Listener">
```
CometChat.addGroupListener(
  "UNIQUE_LISTNER_ID",
  new CometChat.GroupListener({
    onGroupMemberJoined: (message, joinedUser, joinedGroup) => {
      console.log("User joined", { message, joinedUser, joinedGroup });
    },
  })
);
```

</Tab>

</Tabs>

## Missed Group Member Joined Events

*In other words, as a member of a group, how do I know if someone joins the group when my app is not running?*

When you retrieve the list of previous messages if a member has joined any group that the logged-in user is a member of, the list of messages will contain an `Action` message. An `Action` message is a sub-class of `BaseMessage` class.

For the group member joined event, in the `Action` object received, the following fields can help you get the relevant information-

1. `action` - `joined`
2. `actionBy` - User object containing the details of the user who joined the group
3. `actionFor`- Group object containing the details of the group the user has joined
